@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-05-17 Fri 14:08 -->
+<!-- 2019-05-17 Fri 16:08 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>THERMOS parameter index</title>
@@ -49,7 +49,7 @@
 <li><a href="#org3a7baa3">1.6. Peak to base ratio</a></li>
 <li><a href="#org173db61">1.7. Heat price</a></li>
 <li><a href="#org36f1d7e">1.8. Connection cost</a></li>
-<li><a href="#orgf914ea4">1.9. <span class="todo TODO">TODO</span> Emissions factors</a></li>
+<li><a href="#orga82466f">1.9. <span class="todo TODO">TODO</span> Emissions factors</a></li>
 </ul>
 </li>
 <li><a href="#org6dabf1f">2. Facts about pipes</a>
@@ -66,7 +66,7 @@
 <li><a href="#orgba18e61">3.3. Capacity cost</a></li>
 <li><a href="#orgca52ad3">3.4. Annual cost</a></li>
 <li><a href="#org54ee262">3.5. Supply cost</a></li>
-<li><a href="#orga82466f">3.6. Emissions factors</a></li>
+<li><a href="#org576fd0e">3.6. Emissions factors</a></li>
 </ul>
 </li>
 <li><a href="#orgcf22e13">4. Financial parameters</a>
@@ -244,8 +244,8 @@ It can also be edited for each building in the <a href="networks.html">network e
 </div>
 </div>
 
-<div id="outline-container-orgf914ea4" class="outline-3">
-<h3 id="orgf914ea4"><span class="section-number-3">1.9</span> <span class="todo TODO">TODO</span> Emissions factors</h3>
+<div id="outline-container-orga82466f" class="outline-3">
+<h3 id="orga82466f"><span class="section-number-3">1.9</span> <span class="todo TODO">TODO</span> Emissions factors</h3>
 </div>
 </div>
 
@@ -516,8 +516,8 @@ The supply cost is the net cost of producing heat to put into the network. If th
 </div>
 </div>
 
-<div id="outline-container-orga82466f" class="outline-3">
-<h3 id="orga82466f"><span class="section-number-3">3.6</span> Emissions factors</h3>
+<div id="outline-container-org576fd0e" class="outline-3">
+<h3 id="org576fd0e"><span class="section-number-3">3.6</span> Emissions factors</h3>
 <div class="outline-text-3" id="text-3-6">
 <p>
 Supply emissions factors are the emissions factors associated with producing a unit of heat to put into the network.
